experimental branch for testing cloud deployment

--- a/src/test/resources/projects/alphaCloud-json-wcmio-caconfig-acscommons-frontend/archetype.properties
+++ b/src/test/resources/projects/alphaCloud-json-wcmio-caconfig-acscommons-frontend/archetype.properties
@@ -20,6 +20,6 @@ optionContextAwareConfig=y
 optionFrontend=y
 optionNodeJsPlugin=n
 optionWcmioHandler=y
-optionAcsCommons=y
+optionAcsCommons=n
 optionI18nInContent=n
 optionIntegrationTests=n
