--- a/src/test/resources/projects/betaCloud-json-wcmio-editableTpl-caconfig-multibundle/archetype.properties
+++ b/src/test/resources/projects/betaCloud-json-wcmio-editableTpl-caconfig-multibundle/archetype.properties
@@ -17,7 +17,7 @@ optionSlingInitialContentBundle=y
 optionEditableTemplates=y
 optionMultiBundleLayout=y
 optionContextAwareConfig=y
-optionFrontend=n
+optionFrontend=y
 optionNodeJsPlugin=n
 optionWcmioHandler=y
 optionAcsCommons=n
